--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId><!-- includes the hibernate implementation, check out the spring-boot-starter-data-jpa-{version}.pom -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
