--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  rabbitmq:
+    password: guest
+    port: '5672'
+    host: localhost
+    username: guest
 welcome:
   message: Welcome to spring boot demo by Kyron!!
 
@@ -29,6 +34,11 @@ profileconstants:
   controllerconstants:
     person: test_value_profile_dev
 
+kyron:
+  rabbit:
+    mq:
+      queue:
+        name: cola1
 # actuator config
 management:
   endpoints:
@@ -50,13 +60,22 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  rabbitmq:
+    password: guest
+    port: '5672'
+    host: localhost
+    username: guest
 welcome:
   message: Welcome to spring boot demo by Kyron!!
   
 profileconstants:
   controllerconstants:
     person: test_value_profile_qa
-
+kyron:
+  rabbit:
+    mq:
+      queue:
+        name: cola1
 # actuator config
 management:
   endpoints:
@@ -78,13 +97,22 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  rabbitmq:
+    password: guest
+    port: '5672'
+    host: localhost
+    username: guest
 welcome:
   message: Welcome to spring boot demo by Kyron!!
 
 profileconstants:
   controllerconstants:
     person: test_value_profile_prod
-
+kyron:
+  rabbit:
+    mq:
+      queue:
+        name: cola1
 # actuator config
 management:
   endpoints:
